# succ_ws

./: .gitignore  CMakeLists.txt  Dockerfile  Readme.md  docker-compose.yml  script.sh  server
data/: flag.txt  home.html  info.html  more.html  photos.html
src/: CMakeLists.txt  listener.cpp  listener.hpp  server.cpp  session.cpp  session.hpp  utils.hpp  web_socket_server.cpp  web_socket_server.hpp
web/: awesome.css  awesome.js  index.html
web/img/: links.txt
